@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-04T02:05:43Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 4 ],
-  "count_decinc" : [ -2, +4 ],
+  "timestamp" : "2022-08-04T16:34:43Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -3, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +2 ]
