@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-08-04T08:31:56Z",
+  "timestamp" : "2022-08-04T16:34:43Z",
   "count_outdated" : 706,
   "uniques_outdated" : 368,
   "count" : 738,
@@ -7,8 +7,8 @@
   "clones" : [
     {
       "timestamp": "2022-07-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
